<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>thesis</name>
  <version>1.0.0</version>
  <description>Package developed for my thesis work</description>
  <maintainer email="paolo19ruggeri@gmail.com">Paolo Ruggeri</maintainer>
  <license>3-Clause BSD License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>opencv2</depend>
  <depend>pycoral.utils</depend>
  <depend>functools</depend>
  <depend>collections</depend>
  <depend>tflite_runtime.interpreter</depend>
  <depend>PIL</depend>
  <depend>enum</depend>
  <depend>math</depend>
  <depend>numpy</depend>
  <depend>platform</depend>
  <depend>os</depend>
  <depend>sys</depend>
  <depend>time</depend>
  <depend>matplotlib</depend>
  <depend>skimage</depend>
  <depend>glob</depend>
  <depend>filterpy</depend>
  <depend>custom_interfaces</depend>
  <depend>pyzbar</depend>
  <depend>dt_apriltags</depend>
  <depend>scipy</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
